# python-client

./: .gitignore  README.md  pyproject.toml  renovate.json
.github/workflows/: publish.yml  test.yml
examples/: README.md  get_tenant_token.py  upload_firmware.py
iot_inspector_client/: __init__.py  client.py  errors.py  models.py
iot_inspector_client/keys/: ca.pem  demo_id_token_public_key.pem  demo_tenant_token_public_key.pem  platform_id_token_public_key.pem  platform_tenant_token_public_key.pem
iot_inspector_client/queries/: __init__.py  create_firmware_upload.graphql  utils.py
onekey_client/: __init__.py  client.py  errors.py  models.py
onekey_client/cli/: ci.py  cli.py  firmware_upload.py  misc.py
onekey_client/queries/: __init__.py  get_analysis_configurations.graphql  get_same_product_firmwares.graphql  get_self.graphql  utils.py
src/iot_inspector/: client.py  errors.py  models.py
src/iot_inspector/queries/: utils.py
