[tool.poetry]
name = "onekey_client"
version = "2.3.0"
description = "ONEKEY API client"
homepage = "https://www.onekey.com/"
authors = ["ONEKEY <support@onekey.com>"]
license = "MIT"
readme = "README.md"
keywords = ["iot", "security", "firmware", "analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Security"]

[tool.poetry.urls]
"GitHub" = "https://github.com/onekey-sec/python-client"
"Bug Tracker" = "https://github.com/onekey-sec/python-client/issues"

[tool.poetry.dependencies]
python = "^3.8.0"
httpx = "0.28.1"
pydantic = "1.10.20"
Authlib = ">=0.15.3,<1.4.0"
importlib-resources = "^5.1.2"
click = "^8.1.3"
junit-xml = "^1.9"

[tool.poetry.dev-dependencies]
black = "^24.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
onekey = "onekey_client.cli.cli:main"
