[project]
name = "onekey_client"
version = "2.3.0"
description = "ONEKEY API client"
authors = [{ name = "ONEKEY", email = "support@onekey.com" }]
requires-python = ">=3.9"
readme = "README.md"
license = "MIT"
keywords = ["iot", "security", "firmware", "analysis"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Security",
]
dependencies = [
  "httpx==0.28.1",
  "pydantic==2.12.5",
  "Authlib>=1.4.1,<2.0.0",
  "importlib-resources>=6.0.0,<7",
  "click>=8.1.3,<9",
  "junit-xml>=1.9,<2",
]

[project.urls]
Homepage = "https://www.onekey.com/"
GitHub = "https://github.com/onekey-sec/python-client"
"Bug Tracker" = "https://github.com/onekey-sec/python-client/issues"

[project.scripts]
onekey = "onekey_client.cli.cli:main"

[dependency-groups]
dev = ["ruff==0.14.10"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
