[project]
name = "onekey_client"
version = "2.4.0"
description = "ONEKEY API client"
authors = [{ name = "ONEKEY", email = "support@onekey.com" }]
requires-python = ">=3.9"
readme = "README.md"
license = "MIT"
keywords = ["iot", "security", "firmware", "analysis"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Security",
]
dependencies = [
  "httpx==0.28.1",
  "pydantic==2.12.5",
  "Authlib>=1.4.1,<2.0.0",
  "importlib-resources>=6.0.0,<7",
  "click>=8.1.3,<9",
  "junit-xml>=1.9,<2",
]

[project.urls]
Homepage = "https://www.onekey.com/"
GitHub = "https://github.com/onekey-sec/python-client"
"Bug Tracker" = "https://github.com/onekey-sec/python-client/issues"

[project.scripts]
onekey = "onekey_client.cli.cli:main"

[dependency-groups]
dev = ["ruff==0.14.10"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = [
  "A",      # flake8-builtins
  "ARG",    # flake8-unused-arguments
  "B",      # flake8-bugbear
  "C4",     # flake8-comprehensions
  "C90",    # mccabe
  "COM818", # flake8-commas; trailing-comma-on-bare-tuple
  "D",      # pydocstyle
  "E",      # pycodestyle (errors)
  "F",      # pyflakes
  "I",      # isort
  "N",      # pep8-naming
  "PIE",    # flake8-pie
  "PL",     # pylint
  "PT",     # flake8-pytest-style
  "PTH",    # flake8-use-pathlib
  "RET",    # flake8-return
  "RSE",    # flake8-raise
  "RUF",    # ruff's own lints
  "S",      # flake8-bandit
  "SIM",    # flake8-simplify
  "SLF",    # flake8-self
  "T10",    # flake8-debugger
  "T20",    # flake8-print
  "TC",     # flake8-type-checking
  "TRY",    # tryceratops
  "UP",     # pyupgrade
  "W",      # pycodestyle (warnings)
]

ignore = [
  "D1",    # undocumented-*:                          We are not documenting every public symbol
  "D203",  # one-blank-line-before-class:             D211 (no-blank-line-before-class) is used instead
  "D213",  # multi-line-summary-second-line:          D212 (multi-line-summary-first-line) is used instead
  "E501",  # line-too-long:                           Let ruff format handle line length violations
  "N818",  # error-suffix-on-exception-name:          Exception names can be meaningful without smurfs
  "PLR09", # too-many-{arguments,branches,...}:       We do not want to impose hard limits
  "S101",  # assert:                                  Enable usage of asserts
]

[tool.ruff.lint.per-file-ignores]
"examples/*" = [
  "T201", # print
]
